--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -124,7 +124,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2017-03-05}
+  \date{2017-03-06}
 
 % \defaultfontfeatures{
 %     Path = /home/ghassany/texmf/fonts/opentype/public/fontawesome/}
@@ -1253,8 +1253,8 @@ the \texttt{plot()} function, type \texttt{?plot}.
 
 \CommentTok{# Sampling from a Normal - 100 random points from a N(0, 1)}
 \KeywordTok{rnorm}\NormalTok{(}\DataTypeTok{n =} \DecValTok{10}\NormalTok{, }\DataTypeTok{mean =} \DecValTok{0}\NormalTok{, }\DataTypeTok{sd =} \DecValTok{1}\NormalTok{)}
-\CommentTok{#ans>  [1]  1.7638 -0.5396  0.0142  1.9150  2.2755  0.4853 -0.1211  0.2047}
-\CommentTok{#ans>  [9] -0.3699  0.4550}
+\CommentTok{#ans>  [1]  2.0291  0.5653  1.4579 -0.3624 -0.3078 -0.4662 -1.5784  0.0245}
+\CommentTok{#ans>  [9] -0.0864 -1.4929}
 
 \CommentTok{# If you want to have always the same result, set the seed of the random number}
 \CommentTok{# generator}
@@ -2387,7 +2387,7 @@ For your submitted report, use the following YAML header:
 title: "Week 2"
 subtitle: "Multiple Linear Regression"
 author: LastName FirstName
-date: "2017-03-05 21:46:50"
+date: "2017-03-06 09:55:27"
 output:
   html_document:
     toc: true
@@ -5617,6 +5617,49 @@ compare with the question \textbf{17}.
 By applying \(k\)-means only on the PCs we obtain different and less
 accurate result, but it is still an insightful way.
 \end{rmdinsight}
+
+\subsection*{\texorpdfstring{\texttt{Implementing\ k-means}}{Implementing k-means}}\label{implementing-k-means}
+\addcontentsline{toc}{subsection}{\texttt{Implementing\ k-means}}
+
+In this part, you will perform \(k\)-means clustering manually, with
+\(k=2\), on a small example with \(n=6\) observations and \(p=2\)
+features. The observations are as follows.
+
+\begin{longtable}[]{@{}ccc@{}}
+\toprule
+\textbf{Observation} & \textbf{\(X_1\)} &
+\textbf{\(X_2\)}\tabularnewline
+\midrule
+\endhead
+1 & 1 & 4\tabularnewline
+2 & 1 & 3\tabularnewline
+3 & 0 & 4\tabularnewline
+4 & 5 & 1\tabularnewline
+5 & 6 & 2\tabularnewline
+6 & 4 & 0\tabularnewline
+\bottomrule
+\end{longtable}
+
+\textbf{19.} Plot the observations.
+
+\textbf{20.} Randomly assign a cluster label to each observation. You
+can use the \texttt{sample()} command in \texttt{R} to do this. Report
+the cluster labels for each observation.
+
+\textbf{21.} Compute the centroid for each cluster.
+
+\textbf{22.} Create a function that calculates the Euclidean distance
+for two observations.
+
+\textbf{23.} Assign each observation to the centroid to which it is
+closest, in terms of Euclidean distance. Report the cluster labels for
+each observation.
+
+\textbf{24.} Repeat \textbf{21} and \textbf{23} until the answers
+obtained stop changing.
+
+\textbf{25.} In your plot from \textbf{19}, color the observations
+according to the cluster labels obtained.
 
 ◼
 
