--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -124,7 +124,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2017-03-06}
+  \date{2017-03-10}
 
 % \defaultfontfeatures{
 %     Path = /home/ghassany/texmf/fonts/opentype/public/fontawesome/}
@@ -2387,7 +2387,7 @@ For your submitted report, use the following YAML header:
 title: "Week 2"
 subtitle: "Multiple Linear Regression"
 author: LastName FirstName
-date: "2017-03-06 09:55:27"
+date: "2017-03-10 00:36:46"
 output:
   html_document:
     toc: true
@@ -5660,6 +5660,126 @@ obtained stop changing.
 
 \textbf{25.} In your plot from \textbf{19}, color the observations
 according to the cluster labels obtained.
+
+◼
+
+\part{Project}\label{part-project}
+
+\chapter*{Final Group Project}\label{final-group-project}
+\addcontentsline{toc}{chapter}{Final Group Project}
+
+The premise of this project is very simple. You are to pick one of the
+datasets below or a real data set for which you believe there are
+interesting questions to answer. You will then try out all the different
+statistical learning approaches that we have covered in this course to
+try to find the best way to answer these questions. The project will be
+completed in groups of 2 or 3 people each.
+
+\subsection*{Deliverables}\label{deliverables}
+\addcontentsline{toc}{subsection}{Deliverables}
+
+This project includes two deliverables:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  A report in \texttt{html} format, written in \texttt{R} using
+  \texttt{RMarkdown} containing:
+
+  \begin{enumerate}
+  \def\labelenumii{\alph{enumii}.}
+  \tightlist
+  \item
+    Members' names.
+  \item
+    Description of the problem.
+  \item
+    Description of the data and the question/s that you are interested
+    in answering.
+  \item
+    Data exploration (statistical analysis).
+  \item
+    Review of some of the approaches that you tried or thought about
+    trying.
+  \item
+    Summary of the final approach you used and why you chose that
+    approach.
+  \item
+    Summary of the results.
+  \item
+    Conclusions.
+  \end{enumerate}
+\item
+  Slides for your presentation.
+\end{enumerate}
+
+You can by the way use \texttt{R} to create your slides. When you create
+a new \texttt{RMarkdown} file, choose \texttt{Presentation} instead of
+\texttt{Document} on left, choose \texttt{ioslides} or \texttt{Slidy}.
+Here is an
+\href{http://htmlpreview.github.io/?https://github.com/sje30/ioslidesexample/blob/master/ioslidesexample.html\#1}{example}
+and its
+\href{https://raw.githubusercontent.com/sje30/ioslidesexample/master/ioslidesexample.Rmd}{code}.
+
+\subsection*{Presentation}\label{presentation}
+\addcontentsline{toc}{subsection}{Presentation}
+
+You must submit the deliverables on Moodle. The due date for submission
+of both of the deliverables is Sunday \textbf{19/03/2017 23:59}.
+
+You will present your work during the last session of this course. You
+will have not more than 10 minutes for your presentation.
+
+In preparing the presentation you should be aiming it at a smart
+audience with statistical training to the level of multiple linear
+regression but not beyond. Hence, you should not just say ``We did LDA''
+but also explain the basic idea of how it works, why it might be better
+than linear regression etc.
+
+Among other things, points will be allocated for clear articulations of
+the question of interest, the approach you used to solve it, the reason
+you chose that approach, and the conclusions you were able to draw.
+
+\subsection*{Datasets}\label{datasets}
+\addcontentsline{toc}{subsection}{Datasets}
+
+\textbf{Remark}: You cannot choose the dataset you analyzed during Week
+5.
+
+\begin{itemize}
+\tightlist
+\item
+  \href{https://archive.ics.uci.edu/ml/datasets/Adult}{Adult income}:
+  Download the dataset from
+  \textcolor{white}{[}\faTable\textcolor{white}{]} here .
+\item
+  \href{https://archive.ics.uci.edu/ml/datasets/Bank+Marketing}{Bank
+  Marketing}: Download the dataset from
+  \textcolor{white}{[}\faTable\textcolor{white}{]} here .
+\item
+  \href{https://www.kaggle.com/c/titanic}{Titanic}: Download the dataset
+  from \textcolor{white}{[}\faTable\textcolor{white}{]} here .
+\item
+  \href{https://www.kaggle.com/deepmatrix/imdb-5000-movie-dataset}{IMDB
+  Movies}: Download the dataset from
+  \textcolor{white}{[}\faTable\textcolor{white}{]} here .
+\end{itemize}
+
+Or you can choose a dataset from the following data repositories:
+
+\begin{itemize}
+\tightlist
+\item
+  \href{www.data.gov.fr}{Open Gov.~Data}.
+\item
+  \href{www.kaggle.com}{Kaggle}.
+\item
+  \href{http://www.kdnuggets.com/datasets/}{KDD Nuggets}.
+\item
+  \href{http://archive.ics.uci.edu/ml/}{UCI Machine Learning
+  Repository}.
+\end{itemize}
 
 ◼
 
