--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -2387,7 +2387,7 @@ For your submitted report, use the following YAML header:
 title: "Week 2"
 subtitle: "Multiple Linear Regression"
 author: LastName FirstName
-date: "2017-03-10 00:36:46"
+date: "2017-03-10 00:45:07"
 output:
   html_document:
     toc: true
@@ -5669,7 +5669,7 @@ according to the cluster labels obtained.
 \addcontentsline{toc}{chapter}{Final Group Project}
 
 The premise of this project is very simple. You are to pick one of the
-datasets below or a real data set for which you believe there are
+datasets below or a real dataset for which you believe there are
 interesting questions to answer. You will then try out all the different
 statistical learning approaches that we have covered in this course to
 try to find the best way to answer these questions. The project will be
@@ -5766,7 +5766,9 @@ you chose that approach, and the conclusions you were able to draw.
   \textcolor{white}{[}\faTable\textcolor{white}{]} here .
 \end{itemize}
 
-Or you can choose a dataset from the following data repositories:
+You are free to use another dataset for which you believe there are
+interesting questions to answer. Or you can choose a dataset from the
+following data repositories:
 
 \begin{itemize}
 \tightlist
